welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: not found: type color
def faireCarre (c:color) {
                  ^PatternPicture:11: error: not found: value faireV
	faireV(Color.red)
        ^PatternPicture:12: error: not found: value faireV
	faireV(Color.blue)
        ^PatternPicture:13: error: not found: value faireV
	faireV(Color.green)
        ^PatternPicture:14: error: not found: value faireV
	faireV(Color.yellow)
        ^